data/derived/comb/progs/unify/prog0746.ml.out
Characters 166-181:
  | _ -> r_digitalRoot n -1;;
         ^^^^^^^^^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
